# elor

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
src/: future.rs  iter.rs  lib.rs  lr.rs  macros.rs  random.rs  refr.rs
src/serde/: de.rs  mod.rs  ser.rs
tests/: main.rs
