[package]
name = "elor"
description = "Base generic implementation of an Either type"
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Aandreba/elor"
keywords = ["either", "eithers", "either-type", "either-types", "either-type"]
categories = ["data-structures", "rust-patterns", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
serialize = ["serde"]
random = ["rand"]
async = ["futures"]

[dependencies]
cfg-if = "1"
futures = { version = "0.3", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
rand = { version = "0.8", optional = true }

[dev-dependencies]
serde_json = "1"